--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,10 +1,17 @@
 .filters {
   background: white;
-  width: 100%;
+  width: 98vw;
+  display: flex;
+  justify-content: center;
+  justify-content: space-between;
+  align-items: baseline;
+}
+.picker {
+  height: 30px;
 }
 .filters li {
   display: inline-block;
-  max-width: 80px;
+  width: 120px;
   padding: 3px;
 }
 .filters li label {
